--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="de">   
+<html lang="de">
 <head>
 <script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "pedri", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
@@ -23,7 +23,7 @@
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-Ich biete meine sexuellen Dienste, Tanz und erotische Massagen nach Hause an. Möchtest du meinen Katalog sehen?</div>
+Ich biete meine sexuellen Dienste, Tanz und erotische Massagen zu Hause an, wollen Sie meinen Katalog sehen?</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
 Nein
@@ -35,17 +35,17 @@ Ja
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-HINWEIS: Stimmst du zu, die nackten Frauen, die du unten siehst, zu respektieren? Wenn du jemanden kennst, bitte sag es nicht und verbreite keine Gerüchte... </div>
+Herzlichen Glückwunsch! Sie wurden aufgenommen, jetzt können Sie mit jedem Mädchen reden und Sex haben, klicken Sie unten auf "eintreten", füllen Sie das Formular aus, Mädchen warten auf ein Date, um Sex zu haben und Spaß zu haben. </div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://aoarlv.swetllove.com/?utm_source=da57dc555e50572d&ban=fb&j1=1&s1=234303&s2=2179274&s3=Pedri" class="step-btn submit-btn tr-submit-button showmail">ICH AKZEPTIERE</a>
+<a href="https://searchfordating.com/tds/ae?tdsId=s2190pos_r&tds_campaign=s2190pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=1b48fff7&subid={Pedri}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">ICH AKZEPTIERE</a>
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn-dimi.akamaized.net/landings/288193/1714145726/images/video-4.mp4" type="video/mp4" type="video/mp4" type="video/mp4">
+<source src="https://cdn-dimi.akamaized.net/landings/290389/1723020901/images/video-1.mp4" type="video/mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
