--- a/index.html
+++ b/index.html
@@ -1,56 +1,89 @@
+<!DOCTYPE html>
 <html lang="de">
 <head>
-<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "pedri", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Diskretes Treffen, Fotoshooting</title>
-<meta content='https://i.postimg.cc/MKFYntt1/photo-5138617427376671525-x.jpg' property='og:image'/>
+<script id="_wau1zx">var _wau = _wau || []; _wau.push(["small", "pedri", "1zx"]);</script><script async src="//waust.at/s.js"></script>
+<title>D&#105;skr&#101;t&#101; Tr&#101;ff&#101;n</title>
+<meta content="https://i.postimg.cc/SQVxd77J/Vista-Uno-Sepia.png" property="og:image">
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
-<script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
-<script src="https://cdn.smrt-content.com/assets/1004/js/backoffer.js"></script>
 <link rel="stylesheet" href="https://cdn.smrt-content.com/assets/1004/css/index.css">
-<link rel="shortcut icon" href="https://cdn.jmpcdn.com/assets/3420/images/2.ico" type="image/x-icon">
-<title>Fotogalerie</title>
-<div class="layer">
-</div>
+<style type="text/css">
+.bg-wrap { position: fixed; inset: 0; z-index: -1; overflow: hidden; }
+.bg-mask { position: absolute; inset: 0; z-index: 2; pointer-events: none; background: linear-gradient(rgba(255,255,255,0.1) 1px, transparent 1px), linear-gradient(90deg, rgba(255,255,255,0.1) 1px, transparent 1px); background-size: 3px 3px; }
+#VideoBg { width: 100%; height: 100%; object-fit: cover; filter: blur(10px) brightness(0.7); }
+.footer-legal { position: fixed; bottom: 10px; width: 100%; text-align: center; font-size: 11px; color: rgba(255,255,255,0.5); z-index: 100; font-family: sans-serif; }
+.footer-legal a { color: rgba(255,255,255,0.7); text-decoration: none; margin: 0 5px; cursor: pointer; }
+.modal-legal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.95); z-index: 1000; padding: 20px; color: #ccc; overflow-y: auto; font-family: sans-serif; }
+.modal-content { max-width: 500px; margin: 50px auto; font-size: 14px; line-height: 1.6; background: rgba(15,15,15,0.9); padding: 25px; border-radius: 12px; border: 1px solid #444; backdrop-filter: blur(10px); }
+.close-modal { float: right; font-size: 24px; cursor: pointer; color: #fff; }
+#cookie-banner { position: fixed; bottom: 60px; left: 50%; transform: translateX(-50%); width: 85%; max-width: 380px; background: rgba(255, 255, 255, 0.05); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); color: #fff; padding: 20px; border-radius: 15px; z-index: 99; border: 1px solid rgba(255, 255, 255, 0.1); font-family: sans-serif; font-size: 13px; text-align: center; }
+.cookie-btn { background: #ff00ff; color: #fff; border: 1px solid #000; padding: 12px 20px; border-radius: 30px; margin-top: 15px; cursor: pointer; font-weight: bold; width: 100%; text-transform: uppercase; transition: 0.3s; }
+</style>
+</head>
+<body>
+<div class="layer"></div>
 <div class="wrap">
 <div class="step-block">
-<div class="logo">
-<img src="   " alt="">
-</div>
 <div class="step-item" style="display: block;">
-<div class="question-title ">
-Ich biete meine sexuellen Dienste, Tanz und erotische Massagen zu Hause an, wollen Sie meinen Katalog sehen?</div>
+<div class="question-title">
+&#73;ch b&#105;&#101;t&#101; m&#101;&#105;n&#101; D&#105;&#101;nst&#101; st&#117;ndl&#105;ch &#97;n, m&#105;t L&#105;&#101;f&#101;r&#117;ng &#105;n d&#101;r g&#97;nz&#101;n St&#97;dt. M&#246;cht&#101;n S&#105;&#101; m&#101;&#105;n&#101;n K&#97;t&#97;l&#111;g s&#101;h&#101;n?
+</div>
 <div class="buttons-block">
-<div class="step-btn no-btn tr-next-button tr-b-option">
-Nein
-</div>
-<div class="step-btn yes-btn tr-next-button tr-b-option">
-Ja
+<div class="step-btn no-btn tr-next-button">N&#101;&#105;n</div>
+<div class="step-btn yes-btn tr-next-button">J&#97;</div>
 </div>
 </div>
+<div class="step-item" style="display: none;">
+<div class="question-title">
+&#65;CHT&#85;NG! S&#105;nd S&#105;&#101; b&#101;r&#101;&#105;t, d&#105;&#101; Fr&#97;&#117;&#101;n z&#117; r&#101;sp&#101;kt&#105;&#101;r&#101;n, d&#105;&#101; S&#105;&#101; h&#105;&#101;r s&#101;h&#101;n? W&#101;nn S&#105;&#101; j&#101;m&#97;nd&#101;n k&#101;nn&#101;n, v&#101;rbr&#101;&#105;t&#101;n S&#105;&#101; k&#101;&#105;n&#101; G&#101;r&#252;cht&#101;.
 </div>
-<div class="step-item thishide" style="display: none;">
-<div class="question-title ">
-Herzlichen Glückwunsch! Sie wurden aufgenommen, jetzt können Sie mit jedem Mädchen reden und Sex haben, klicken Sie unten auf "eintreten", füllen Sie das Formular aus, Mädchen warten auf ein Date, um Sex zu haben und Spaß zu haben. </div>
-<p>
-<b style="color: red;">
-</b>
-</p>
 <div class="buttons-block">
-<a href="https://searchfordating.com/tds/ae?tdsId=s2190pos_r&tds_campaign=s2190pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=1b48fff7&subid={Pedri}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">ICH AKZEPTIERE</a>
+<a href="https://lov-me-bttr.com/tds/ae?tdsId=s2190pos_r&tds_campaign=s2190pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=1b48fff7&subid={Pedri}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn">&#73;CH &#65;KZ&#69;PT&#73;&#69;R&#69;</a>
 </div>
 </div>
-<video autoplay muted loop id="VideoBg">
-<source src="https://cdn-dimi.akamaized.net/landings/290389/1723020901/images/video-1.mp4" type="video/mp4" type="video/mp4">
-</video>
+</div>
+</div>
+<div id="cookie-banner">
+D&#101;&#105;s&#101; W&#101;bs&#105;t&#101; v&#101;rw&#101;nd&#101;t C&#111;&#111;k&#105;&#101;s, \117;m d&#105;&#101; F\117;nkt&#105;&#111;n&#97;l&#105;t&#228;t z\117; g&#101;w&#228;hrl&#101;&#105;st&#101;n.
+<br><button class="cookie-btn" onclick="$('#cookie-banner').fadeOut()">&#65;kz&#101;pt&#105;&#101;r&#101;n</button>
+</div>
+<div class="footer-legal">
+<a href="#" onclick="showLegal('p')">D&#97;t&#101;nsch&#117;tz</a> | 
+<a href="#" onclick="showLegal('c')">B&#101;d&#105;ng&#117;ng&#101;n</a> | 
+<a href="#" onclick="showLegal('k')">C&#111;&#111;k&#105;&#101;</a>
+<br>&copy; 2025
+</div>
+<div id="legalModal" class="modal-legal">
+<div class="modal-content">
+<span class="close-modal" onclick="$('#legalModal').fadeOut()">&times;</span>
+<div id="legalText"></div>
+</div>
+</div>
+<div class="bg-wrap">
+<div class="bg-mask"></div>
+<img src="https://i.ibb.co/rGRQFK2s/thrfdhtdf.gif" alt="media" id="VideoBg">
+</div>
 <script type="text/javascript">
-      /*<![CDATA[*/    (function(w){
-        w.backOfferUrl = ''    }
-                        (window));
-      /*]]>*/ 
+const texts = {
+    p: "<h2>D&#97;t&#101;nsch&#117;tz</h2><p>&#73;hr&#101; Pr&#105;v&#97;tsph&#228;r&#101; &#105;st \117;ns w&#105;cht&#105;g. &#73;hr&#101; D&#97;t&#101;n w&#101;rd&#101;n n&#105;cht &#97;n Dr&#105;tt&#101; w&#101;&#105;t&#101;rg&#101;g&#101;b&#101;n.</p>",
+    c: "<h2>B&#101;d&#105;ng&#117;ng&#101;n</h2><p>D&#101;&#105;s&#101; S&#101;&#105;t&#101; &#105;st n\117;r f\117;r \193;rw&#97;chs&#101;n&#101; (18+). M&#105;t d&#101;m B&#101;tr&#101;t&#101;n &#97;kz&#101;pt&#105;&#101;r&#101;n S&#105; d&#105;&#101; R&#101;g&#101;ln.</p>",
+    k: "<h2>C&#111;&#111;k&#105;&#101;</h2><p>W&#101;&#105;r v&#101;rw&#101;nd&#101;t C&#111;&#111;k&#105;&#101;s, \117;m d&#105;&#101; B&#101;n\117;tz&#101;r&#101;rf&#97;hr\117;ng z\117; v&#101;rb&#101;ss&#101;rn.</p>"
+};
+function showLegal(type) { $('#legalText').html(texts[type]); $('#legalModal').fadeIn(); }
+$(document).ready(function() {
+   const q = window.location.search.substring(1);
+   let n = (parseInt(q) || 0) + 1;
+   if (n > 9999) n = 1;
+   window.history.replaceState(null, null, window.location.pathname + '?' + n);
+   $('.tr-next-button').on('click', function() {
+       var p = $(this).closest('.step-item');
+       p.hide(); p.next().show();
+   });
+});
+</script>
 </body>
 </html>
